--- a/lab1_2.ipynb
+++ b/lab1_2.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "define paremetrs for lamdba"
+    "Define paremetrs"
    ]
   },
   {
@@ -45,6 +45,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define function to generate mu"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 182,
    "metadata": {},
@@ -57,6 +64,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define funcrion to generate x"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 183,
    "metadata": {},
@@ -65,6 +79,13 @@
     "def generate_x(omega, a):\n",
     "    mu = np.array([calculate_mu() for _ in range(num_samples)])\n",
     "    return omega * mu + a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define chi-sqared function for normal distribution"
    ]
   },
   {
@@ -88,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "define function for building plot"
+    "Code for model initialization and building plot"
    ]
   },
   {
